--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -116,4 +116,15 @@ header h1 {
 .transcription p {
   margin: 0;
   line-height: 1.5;
+}
+
+.video-info {
+  margin-top: 10px;
+  font-size: 0.9em;
+  color: #666;
+}
+
+.error {
+  color: #d9534f;
+  font-weight: bold;
 } 
